2012-07-xx  -  PgBouncer 1.5.3  -  ""

  = Minor Feature =

    * max_packet_size - config parameter to tune maximum packet size
      that is allowed through.  Default is kept same: (2G-1), but now
      it can be made smaller.

    * In case of unparseable packet header, show it in hex in log and
      error message.

  = Fixes =

    * AntiMake: it used $(relpath) and $(abspath) to manupulate pathnames,
      but the result was build failure when source tree path contained
      symlinks.  The code is now changed to work on plain strings only.

    * console: now SET can be used to set empty string values.

    * config.txt: show that all timeouts can be set in floats.
      This is well-hidden feature introduced in 1.4.

2012-05-29  -  PgBouncer 1.5.2  -  "Don't Chew, Just Swallow"

  = Fixes =

    * Due to mistake, reserve_pool_timeout was taken in microseconds,
      not seconds, effectively activating reserve pool immediately
      when pool got full.  Now use it as seconds, as was intended.
      (Noticed by Keyur Govande)

2012-04-17  -  PgBouncer 1.5.1  -  "Abort, Retry, Ignore?"

  = Features =

    * Parameters to tune permissions on unix socket:
      unix_socket_mode=0777, unix_socket_group=''.

  = Fixes =

    * Allow empty string for server-side variable - this is
      needed to get "application_name" properly working, as it's
      the only parameter that does not have server-side default.

    * If connect string changes, require refresh of server parameters.
      Previously PgBouncer continued with old parameters,
      which breaks in case of Postgres upgrade.

    * If autodb connect string changes, drop old connections.

    * cf_setint: Use strtol() instead atoi() to parse integer config
      parameters.  It allows hex, octal and better error detection.

    * Use sigqueue() to detect union sigval existence - fixes
      compilation on HPUX.

    * Remove 'git' command from Makefile, it throws random errors